cmake_minimum_required(VERSION 3.15)
project(group50_master C)

set(CMAKE_C_STANDARD 11)

include_directories(pintos/src/devices)
include_directories(pintos/src/filesys)
include_directories(pintos/src/lib)
include_directories(pintos/src/lib/kernel)
include_directories(pintos/src/lib/user)
include_directories(pintos/src/tests)
include_directories(pintos/src/tests/filesys)
include_directories(pintos/src/tests/filesys/base)
include_directories(pintos/src/tests/filesys/extended)
include_directories(pintos/src/tests/memory)
include_directories(pintos/src/tests/threads)
include_directories(pintos/src/tests/userprog)
include_directories(pintos/src/tests/vm)
include_directories(pintos/src/threads)
include_directories(pintos/src/userprog)

add_executable(group50_master
        pintos/src/devices/block.c
        pintos/src/devices/block.h
        pintos/src/devices/ide.c
        pintos/src/devices/ide.h
        pintos/src/devices/input.c
        pintos/src/devices/input.h
        pintos/src/devices/intq.c
        pintos/src/devices/intq.h
        pintos/src/devices/kbd.c
        pintos/src/devices/kbd.h
        pintos/src/devices/partition.c
        pintos/src/devices/partition.h
        pintos/src/devices/pit.c
        pintos/src/devices/pit.h
        pintos/src/devices/rtc.c
        pintos/src/devices/rtc.h
        pintos/src/devices/serial.c
        pintos/src/devices/serial.h
        pintos/src/devices/shutdown.c
        pintos/src/devices/shutdown.h
        pintos/src/devices/speaker.c
        pintos/src/devices/speaker.h
        pintos/src/devices/timer.c
        pintos/src/devices/timer.h
        pintos/src/devices/vga.c
        pintos/src/devices/vga.h
        pintos/src/examples/bubsort.c
        pintos/src/examples/cat.c
        pintos/src/examples/cmp.c
        pintos/src/examples/cp.c
        pintos/src/examples/echo.c
        pintos/src/examples/halt.c
        pintos/src/examples/hex-dump.c
        pintos/src/examples/insult.c
        pintos/src/examples/lineup.c
        pintos/src/examples/ls.c
        pintos/src/examples/matmult.c
        pintos/src/examples/mcat.c
        pintos/src/examples/mcp.c
        pintos/src/examples/mkdir.c
        pintos/src/examples/pwd.c
        pintos/src/examples/recursor.c
        pintos/src/examples/rm.c
        pintos/src/examples/shell.c
        pintos/src/filesys/buffer-cache.c
        pintos/src/filesys/buffer-cache.h
        pintos/src/filesys/directory.c
        pintos/src/filesys/directory.h
        pintos/src/filesys/file.c
        pintos/src/filesys/file.h
        pintos/src/filesys/filesys.c
        pintos/src/filesys/filesys.h
        pintos/src/filesys/free-map.c
        pintos/src/filesys/free-map.h
        pintos/src/filesys/fsutil.c
        pintos/src/filesys/fsutil.h
        pintos/src/filesys/inode.c
        pintos/src/filesys/inode.h
        pintos/src/filesys/off_t.h
        pintos/src/lib/kernel/bitmap.c
        pintos/src/lib/kernel/bitmap.h
        pintos/src/lib/kernel/console.c
        pintos/src/lib/kernel/console.h
        pintos/src/lib/kernel/debug.c
        pintos/src/lib/kernel/hash.c
        pintos/src/lib/kernel/hash.h
        pintos/src/lib/kernel/list.c
        pintos/src/lib/kernel/list.h
        pintos/src/lib/kernel/stdio.h
        pintos/src/lib/user/console.c
        pintos/src/lib/user/debug.c
        pintos/src/lib/user/entry.c
        pintos/src/lib/user/stdio.h
        pintos/src/lib/user/syscall.c
        pintos/src/lib/user/syscall.h
        pintos/src/lib/arithmetic.c
        pintos/src/lib/ctype.h
        pintos/src/lib/debug.c
        pintos/src/lib/debug.h
        pintos/src/lib/inttypes.h
        pintos/src/lib/limits.h
        pintos/src/lib/packed.h
        pintos/src/lib/random.c
        pintos/src/lib/random.h
        pintos/src/lib/round.h
        pintos/src/lib/stdarg.h
        pintos/src/lib/stdbool.h
        pintos/src/lib/stddef.h
        pintos/src/lib/stdint.h
        pintos/src/lib/stdio.c
        pintos/src/lib/stdio.h
        pintos/src/lib/stdlib.c
        pintos/src/lib/stdlib.h
        pintos/src/lib/string.c
        pintos/src/lib/string.h
        pintos/src/lib/syscall-nr.h
        pintos/src/lib/ustar.c
        pintos/src/lib/ustar.h
        pintos/src/tests/filesys/base/child-syn-read.c
        pintos/src/tests/filesys/base/child-syn-wrt.c
        pintos/src/tests/filesys/base/lg-create.c
        pintos/src/tests/filesys/base/lg-full.c
        pintos/src/tests/filesys/base/lg-random.c
        pintos/src/tests/filesys/base/lg-seq-block.c
        pintos/src/tests/filesys/base/lg-seq-random.c
        pintos/src/tests/filesys/base/sm-create.c
        pintos/src/tests/filesys/base/sm-full.c
        pintos/src/tests/filesys/base/sm-random.c
        pintos/src/tests/filesys/base/sm-seq-block.c
        pintos/src/tests/filesys/base/sm-seq-random.c
        pintos/src/tests/filesys/base/syn-read.c
        pintos/src/tests/filesys/base/syn-read.h
        pintos/src/tests/filesys/base/syn-remove.c
        pintos/src/tests/filesys/base/syn-write.c
        pintos/src/tests/filesys/base/syn-write.h
        pintos/src/tests/filesys/extended/child-syn-rw.c
        pintos/src/tests/filesys/extended/dir-empty-name.c
        pintos/src/tests/filesys/extended/dir-mk-tree.c
        pintos/src/tests/filesys/extended/dir-mkdir.c
        pintos/src/tests/filesys/extended/dir-open.c
        pintos/src/tests/filesys/extended/dir-over-file.c
        pintos/src/tests/filesys/extended/dir-rm-cwd.c
        pintos/src/tests/filesys/extended/dir-rm-parent.c
        pintos/src/tests/filesys/extended/dir-rm-root.c
        pintos/src/tests/filesys/extended/dir-rm-tree.c
        pintos/src/tests/filesys/extended/dir-rmdir.c
        pintos/src/tests/filesys/extended/dir-under-file.c
        pintos/src/tests/filesys/extended/dir-vine.c
        pintos/src/tests/filesys/extended/grow-create.c
        pintos/src/tests/filesys/extended/grow-dir-lg.c
        pintos/src/tests/filesys/extended/grow-file-size.c
        pintos/src/tests/filesys/extended/grow-root-lg.c
        pintos/src/tests/filesys/extended/grow-root-sm.c
        pintos/src/tests/filesys/extended/grow-seq-lg.c
        pintos/src/tests/filesys/extended/grow-seq-sm.c
        pintos/src/tests/filesys/extended/grow-sparse.c
        pintos/src/tests/filesys/extended/grow-tell.c
        pintos/src/tests/filesys/extended/grow-two-files.c
        pintos/src/tests/filesys/extended/mk-tree.c
        pintos/src/tests/filesys/extended/mk-tree.h
        pintos/src/tests/filesys/extended/syn-rw.c
        pintos/src/tests/filesys/extended/syn-rw.h
        pintos/src/tests/filesys/extended/tar.c
        pintos/src/tests/filesys/seq-test.c
        pintos/src/tests/filesys/seq-test.h
        pintos/src/tests/internal/list.c
        pintos/src/tests/internal/stdio.c
        pintos/src/tests/internal/stdlib.c
        pintos/src/tests/memory/malloc-fail.c
        pintos/src/tests/memory/malloc-fit.c
        pintos/src/tests/memory/malloc-free.c
        pintos/src/tests/memory/malloc-merge-1.c
        pintos/src/tests/memory/malloc-merge-2.c
        pintos/src/tests/memory/malloc-null.c
        pintos/src/tests/memory/malloc-simple.c
        pintos/src/tests/memory/pt-bad-addr.c
        pintos/src/tests/memory/pt-bad-read.c
        pintos/src/tests/memory/pt-big-stk-obj.c
        pintos/src/tests/memory/pt-grow-bad.c
        pintos/src/tests/memory/pt-grow-pusha.c
        pintos/src/tests/memory/pt-grow-stack.c
        pintos/src/tests/memory/pt-grow-stk-sc.c
        pintos/src/tests/memory/pt-stk-oflow.c
        pintos/src/tests/memory/pt-write-code-2.c
        pintos/src/tests/memory/pt-write-code.c
        pintos/src/tests/memory/realloc-1.c
        pintos/src/tests/memory/realloc-2.c
        pintos/src/tests/memory/realloc-3.c
        pintos/src/tests/memory/realloc-null.c
        pintos/src/tests/memory/sbrk-counter.c
        pintos/src/tests/memory/sbrk-dealloc.c
        pintos/src/tests/memory/sbrk-fail-1.c
        pintos/src/tests/memory/sbrk-fail-2.c
        pintos/src/tests/memory/sbrk-large.c
        pintos/src/tests/memory/sbrk-many.c
        pintos/src/tests/memory/sbrk-mebi.c
        pintos/src/tests/memory/sbrk-multi.c
        pintos/src/tests/memory/sbrk-none.c
        pintos/src/tests/memory/sbrk-oom-1.c
        pintos/src/tests/memory/sbrk-oom-2.c
        pintos/src/tests/memory/sbrk-oom.c
        pintos/src/tests/memory/sbrk-oom.h
        pintos/src/tests/memory/sbrk-page.c
        pintos/src/tests/memory/sbrk-rv.c
        pintos/src/tests/memory/sbrk-simple.c
        pintos/src/tests/memory/sbrk-simple.h
        pintos/src/tests/memory/sbrk-small.c
        pintos/src/tests/memory/sbrk-zero.c
        pintos/src/tests/threads/alarm-negative.c
        pintos/src/tests/threads/alarm-priority.c
        pintos/src/tests/threads/alarm-simultaneous.c
        pintos/src/tests/threads/alarm-wait.c
        pintos/src/tests/threads/alarm-zero.c
        pintos/src/tests/threads/mlfqs-block.c
        pintos/src/tests/threads/mlfqs-fair.c
        pintos/src/tests/threads/mlfqs-load-1.c
        pintos/src/tests/threads/mlfqs-load-60.c
        pintos/src/tests/threads/mlfqs-load-avg.c
        pintos/src/tests/threads/mlfqs-recent-1.c
        pintos/src/tests/threads/priority-change.c
        pintos/src/tests/threads/priority-condvar.c
        pintos/src/tests/threads/priority-donate-chain.c
        pintos/src/tests/threads/priority-donate-lower.c
        pintos/src/tests/threads/priority-donate-multiple.c
        pintos/src/tests/threads/priority-donate-multiple2.c
        pintos/src/tests/threads/priority-donate-nest.c
        pintos/src/tests/threads/priority-donate-one.c
        pintos/src/tests/threads/priority-donate-sema.c
        pintos/src/tests/threads/priority-fifo.c
        pintos/src/tests/threads/priority-preempt.c
        pintos/src/tests/threads/priority-sema.c
        pintos/src/tests/threads/tests.c
        pintos/src/tests/threads/tests.h
        pintos/src/tests/userprog/no-vm/multi-oom.c
        pintos/src/tests/userprog/args.c
        pintos/src/tests/userprog/bad-jump.c
        pintos/src/tests/userprog/bad-jump2.c
        pintos/src/tests/userprog/bad-read.c
        pintos/src/tests/userprog/bad-read2.c
        pintos/src/tests/userprog/bad-write.c
        pintos/src/tests/userprog/bad-write2.c
        pintos/src/tests/userprog/boundary.c
        pintos/src/tests/userprog/boundary.h
        pintos/src/tests/userprog/child-bad.c
        pintos/src/tests/userprog/child-close.c
        pintos/src/tests/userprog/child-rox.c
        pintos/src/tests/userprog/child-simple.c
        pintos/src/tests/userprog/close-bad-fd.c
        pintos/src/tests/userprog/close-normal.c
        pintos/src/tests/userprog/close-stdin.c
        pintos/src/tests/userprog/close-stdout.c
        pintos/src/tests/userprog/close-twice.c
        pintos/src/tests/userprog/create-bad-ptr.c
        pintos/src/tests/userprog/create-bound.c
        pintos/src/tests/userprog/create-empty.c
        pintos/src/tests/userprog/create-exists.c
        pintos/src/tests/userprog/create-long.c
        pintos/src/tests/userprog/create-normal.c
        pintos/src/tests/userprog/create-null.c
        pintos/src/tests/userprog/do-nothing.c
        pintos/src/tests/userprog/do-stack-align.c
        pintos/src/tests/userprog/exec-arg.c
        pintos/src/tests/userprog/exec-bad-ptr.c
        pintos/src/tests/userprog/exec-bound-2.c
        pintos/src/tests/userprog/exec-bound-3.c
        pintos/src/tests/userprog/exec-bound.c
        pintos/src/tests/userprog/exec-missing.c
        pintos/src/tests/userprog/exec-multiple.c
        pintos/src/tests/userprog/exec-once.c
        pintos/src/tests/userprog/exit.c
        pintos/src/tests/userprog/halt.c
        pintos/src/tests/userprog/iloveos.c
        pintos/src/tests/userprog/multi-child-fd.c
        pintos/src/tests/userprog/multi-recurse.c
        pintos/src/tests/userprog/open-bad-ptr.c
        pintos/src/tests/userprog/open-boundary.c
        pintos/src/tests/userprog/open-empty.c
        pintos/src/tests/userprog/open-missing.c
        pintos/src/tests/userprog/open-normal.c
        pintos/src/tests/userprog/open-null.c
        pintos/src/tests/userprog/open-twice.c
        pintos/src/tests/userprog/practice.c
        pintos/src/tests/userprog/read-bad-fd.c
        pintos/src/tests/userprog/read-bad-ptr.c
        pintos/src/tests/userprog/read-boundary.c
        pintos/src/tests/userprog/read-normal.c
        pintos/src/tests/userprog/read-stdout.c
        pintos/src/tests/userprog/read-zero.c
        pintos/src/tests/userprog/rox-child.c
        pintos/src/tests/userprog/rox-multichild.c
        pintos/src/tests/userprog/rox-simple.c
        pintos/src/tests/userprog/sc-bad-arg.c
        pintos/src/tests/userprog/sc-bad-sp.c
        pintos/src/tests/userprog/sc-boundary-2.c
        pintos/src/tests/userprog/sc-boundary-3.c
        pintos/src/tests/userprog/sc-boundary.c
        pintos/src/tests/userprog/stack-align.c
        pintos/src/tests/userprog/wait-bad-pid.c
        pintos/src/tests/userprog/wait-killed.c
        pintos/src/tests/userprog/wait-simple.c
        pintos/src/tests/userprog/wait-twice.c
        pintos/src/tests/userprog/write-bad-fd.c
        pintos/src/tests/userprog/write-bad-ptr.c
        pintos/src/tests/userprog/write-boundary.c
        pintos/src/tests/userprog/write-normal.c
        pintos/src/tests/userprog/write-stdin.c
        pintos/src/tests/userprog/write-zero.c
        pintos/src/tests/vm/child-inherit.c
        pintos/src/tests/vm/child-linear.c
        pintos/src/tests/vm/child-mm-wrt.c
        pintos/src/tests/vm/child-qsort-mm.c
        pintos/src/tests/vm/child-qsort.c
        pintos/src/tests/vm/child-sort.c
        pintos/src/tests/vm/mmap-bad-fd.c
        pintos/src/tests/vm/mmap-clean.c
        pintos/src/tests/vm/mmap-close.c
        pintos/src/tests/vm/mmap-exit.c
        pintos/src/tests/vm/mmap-inherit.c
        pintos/src/tests/vm/mmap-misalign.c
        pintos/src/tests/vm/mmap-null.c
        pintos/src/tests/vm/mmap-over-code.c
        pintos/src/tests/vm/mmap-over-data.c
        pintos/src/tests/vm/mmap-over-stk.c
        pintos/src/tests/vm/mmap-overlap.c
        pintos/src/tests/vm/mmap-read.c
        pintos/src/tests/vm/mmap-remove.c
        pintos/src/tests/vm/mmap-shuffle.c
        pintos/src/tests/vm/mmap-twice.c
        pintos/src/tests/vm/mmap-unmap.c
        pintos/src/tests/vm/mmap-write.c
        pintos/src/tests/vm/mmap-zero.c
        pintos/src/tests/vm/page-linear.c
        pintos/src/tests/vm/page-merge-mm.c
        pintos/src/tests/vm/page-merge-par.c
        pintos/src/tests/vm/page-merge-seq.c
        pintos/src/tests/vm/page-merge-stk.c
        pintos/src/tests/vm/page-parallel.c
        pintos/src/tests/vm/page-shuffle.c
        pintos/src/tests/vm/parallel-merge.c
        pintos/src/tests/vm/parallel-merge.h
        pintos/src/tests/vm/pt-bad-addr.c
        pintos/src/tests/vm/pt-bad-read.c
        pintos/src/tests/vm/pt-big-stk-obj.c
        pintos/src/tests/vm/pt-grow-bad.c
        pintos/src/tests/vm/pt-grow-pusha.c
        pintos/src/tests/vm/pt-grow-stack.c
        pintos/src/tests/vm/pt-grow-stk-sc.c
        pintos/src/tests/vm/pt-write-code-2.c
        pintos/src/tests/vm/pt-write-code.c
        pintos/src/tests/vm/qsort.c
        pintos/src/tests/vm/qsort.h
        pintos/src/tests/arc4.c
        pintos/src/tests/arc4.h
        pintos/src/tests/cksum.c
        pintos/src/tests/cksum.h
        pintos/src/tests/lib.c
        pintos/src/tests/lib.h
        pintos/src/tests/main.c
        pintos/src/tests/main.h
        pintos/src/threads/fixed-point.h
        pintos/src/threads/flags.h
        pintos/src/threads/init.c
        pintos/src/threads/init.h
        pintos/src/threads/interrupt.c
        pintos/src/threads/interrupt.h
        pintos/src/threads/intr-stubs.h
        pintos/src/threads/io.h
        pintos/src/threads/loader.h
        pintos/src/threads/malloc.c
        pintos/src/threads/malloc.h
        pintos/src/threads/palloc.c
        pintos/src/threads/palloc.h
        pintos/src/threads/pte.h
        pintos/src/threads/switch.h
        pintos/src/threads/synch.c
        pintos/src/threads/synch.h
        pintos/src/threads/thread.c
        pintos/src/threads/thread.h
        pintos/src/threads/vaddr.h
        pintos/src/userprog/exception.c
        pintos/src/userprog/exception.h
        pintos/src/userprog/gdt.c
        pintos/src/userprog/gdt.h
        pintos/src/userprog/pagedir.c
        pintos/src/userprog/pagedir.h
        pintos/src/userprog/process.c
        pintos/src/userprog/process.h
        pintos/src/userprog/syscall.c
        pintos/src/userprog/syscall.h
        pintos/src/userprog/tss.c
        pintos/src/userprog/tss.h
        pintos/src/utils/setitimer-helper.c
        pintos/src/utils/squish-pty.c
        pintos/src/utils/squish-unix.c)
